--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": ".",
   "scripts": {
     "build": "webpack",
-    "dev": "nodemon server/server.ts ",
+    "dev": "cd server && npx tsc",
     "start": "npx webpack serve"
   },
   "author": "Allen Ding",
@@ -22,6 +22,8 @@
     "@babel/preset-react": "^7.18.6",
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "babel-loader": "^9.1.0",
@@ -30,6 +32,7 @@
     "eslint-plugin-react": "^7.31.11",
     "nodemon": "^2.0.20",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
