--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Allen Ding",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
