--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack && cd server && npx tsc",
     "dev": "nodemon server/server.ts",
     "hotloader": "npx webpack serve",
-    "start": "nodemon server/dist/server.js"
+    "start": "nodemon server/dist/server.js",
+    "vercel-build": "webpack && cd server && npx tsc && cd ../api && mv api.js index.js"
   },
   "author": "Allen Ding",
   "license": "ISC",
