--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["es2021"],
     "module": "commonjs",
     "target": "es2021",
-    "outDir": "./dist"
+    // "outDir": "./dist"
+    "outDir": "../api"
   }
 }
