--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "Allen Ding",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^6.8.3",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -23,6 +25,7 @@
     "@babel/core": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
