--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^6.8.3",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
@@ -27,6 +29,7 @@
     "@babel/preset-react": "^7.18.6",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.15",
+    "@types/express-session": "^1.17.5",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
