--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^6.8.3",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.7.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.20.7",
