--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api" },
-    { "source": "/(.*)", "destination": "/test/index.html" }
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
